<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/SetDailyGoal"
        app:showAsAction="never"
        android:title="@string/set_border"/>
    <item
        android:id="@+id/TodayRegistration"
        app:showAsAction="never"
        android:title="@string/today_registration"/>
    <item
        android:id="@+id/RegistrationHistory"
        app:showAsAction="never"
        android:title="@string/registration_history"/>
    <item
        android:id="@+id/Graph"
        app:showAsAction="never"
        android:title="@string/graph"/>
    <item
        android:id="@+id/Favorite"
        app:showAsAction="never"
        android:title="@string/register_favorite"/>

</menu>