<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_message"
        android:textSize="16sp"
        android:padding="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/favorite_food_name"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/frame_border"
            android:gravity="right"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protein_weight"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/favorite_protein_weight"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:gravity="right"
            android:background="@drawable/frame_border"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="g"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="onFavoriteRegisterButtonClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_list"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:onClick="onFavoriteRegisterListButtonClick"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>



</LinearLayout>