<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top_message"
        android:textSize="16sp"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/all_data"
        android:textSize="20sp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>

    <fragment
        android:id="@+id/fragmentFoodList"
        android:name="com.websarva.wings.android.dailyprotein.FoodListFragment"
        android:layout_width="match_parent"
        android:layout_height="220dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/search_by_date"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/tvSearchFoodDate"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:gravity="center"
            android:clickable="true"
            android:onClick="showFoodDatePickerDialog"
            android:background="@drawable/frame_border"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/FoodByDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:backgroundTint="@null"
            android:background="@drawable/purple_button_background"
            android:textColor="@drawable/selector_purple_color"
            android:onClick="onDailyProteinSearchButtonClick"
            android:minHeight="0dp"
            android:minWidth="0dp"/>

    </LinearLayout>

</LinearLayout>