<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_goal_message"
        android:textSize="16sp"
        android:padding="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_goal"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/daily_goal_protein_weight"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:gravity="right"
            android:background="@drawable/frame_border"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="g"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/set_goal"
        app:backgroundTint="@null"
        android:background="@drawable/purple_button_background"
        android:textColor="@drawable/selector_purple_color"
        android:onClick="onSetGoalButtonClick"
        android:layout_marginRight="5dp"/>

</LinearLayout>